--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
